--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <title>Huise Live</title>
+<style>
+.button {
+    background-color: #008CBA; /* Green */
+    border: none;
+    border-radius: 12px;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+</style>
+</head>
+<body>
+    <body bgcolor="#1E1E1E">
+    <center>
+    <iframe src="./h5player/" frameborder="0" name="topFrame" width="960" height="540"></iframe>
+    <br>
+    <br>
+    <a href="./h5player/" class="button" target="topFrame">flv低延迟</a>
+    &nbsp;
+    <a href="hls.html" class="button" target="topFrame">hls高延迟</a>
+    <p><font color="white">优先推荐使用flv流，延迟大概3秒。</font></p>
+    <p><font color="white">无法播放flv流时请更换hls流，延迟大概14秒。</font></p>
+    </center>
+</body>
+</html>
